components/billing-service/base/.tekton/build-webhook-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    build.appstudio.openshift.io/application: nyc-transit
    build.appstudio.openshift.io/build: "true"
    build.appstudio.openshift.io/component: billing-service
    build.appstudio.openshift.io/type: build
    build.appstudio.openshift.io/version: "0.1"
    pipelines.appstudio.openshift.io/type: build
  creationTimestamp: null
  name: elbilling-service
  namespace: jduimovich
spec:
  path: /
  port:
    targetPort: 8080
  to:
    kind: Service
    name: el-billing-service
    weight: null
status: {}
